--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,7 @@
     transition: transform 0.5s ease-in-out;
 }
 .container_page1 img{
-    width: 300px;
-    height: 300px;
+    display: none;
 }
 .container_page1{
     height: 100vh;
@@ -55,6 +54,77 @@
     color: #000000;
     border: none;
     cursor: pointer;
+}
+.hijo_container_page2{
+    height:30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.hijo_container_page2 h1{
+    font-family: 'Inter', sans-serif;
+    font-size: calc(2vw + 35px);
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Agrega sombra al texto */
+    letter-spacing: 2px; /* Aumenta el espaciado entre letras */
+    margin-bottom: 20px; /* Añade espacio debajo del título */
+}
+.tablero {
+    margin: 0 20% 0 20%;
+    perspective: 1000px;
+    height: 60vh;
+    width: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);  /* 4 columnas, cada una toma una fracción del espacio total */
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.carta {
+    transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #9DBCCF;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s; // Animación suave al voltear
+}
+.front, .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bolder;
+    color: #000;
+}
+
+.front {
+    background-color: #fff;
+    border: 2px solid #000;
+}
+
+.back {
+    background-color: #000;
+    border: 2px solid #fff;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.carta.flipped {
+    transform: rotateY(180deg);
 }
 
 
@@ -126,6 +196,7 @@
         margin-bottom: 20px; /* Añade espacio debajo del título */
     }
     .tablero {
+        margin: 0 ;
         perspective: 1000px;
         height: 60vh;
         width: auto;
