--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 *{
-    background-color: #9DBCCF;
+
     transition: all 1s;
     font-family: "JetBrains Mono", monospace;
+}
+body{
+    background-color: #9DBCCF;
 }
 .pages {
     height: 200vh;
@@ -218,7 +221,7 @@
         background-color: #9DBCCF;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        transition: transform 0.3s; // Animación suave al voltear
+        transition: transform 0.3s;
     }
     .front, .back {
         position: absolute;
